--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -98,3 +98,9 @@
     width: 100%;
 }
 
+@media screen and (max-width: 1024px) {
+    .home__social-link {
+        font-size: 1.125rem;
+    } 
+      
+}
