--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,5 +1,5 @@
 .contact.section {
-    padding-bbottom: 6.25rem;
+    padding-bottom: 6.25rem;
 }
 
 .contact__container {
@@ -45,4 +45,30 @@
 
 .contact__form-area textarea {
     resize: none;
+}
+
+@media screen and (max-width: 1024px) {
+    .contact__container {
+    grid-template-columns: 300px 360px;
+    justify-content: center;
+    }
+    .contact__form-group {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .contact__container {
+        grid-template-columns: 310px;    
+        row-gap: 1.875rem;
+    }
+
+    .contact__info {
+        text-align: center;
+    }
+}
+@media screen and (max-width: 350px) {
+    .contact__container {
+        grid-template-columns: 1fr;    
+    }
 }
